fix: overflow sidebar

--- a/src/layouts/Sidebar.module.scss
+++ b/src/layouts/Sidebar.module.scss
@@ -13,6 +13,8 @@
   top: $menu-height;
   bottom: 0;
 
+  overflow-y: auto;
+
   @include mobile {
     margin-left: calc(-1 * $sidebar-width);
     padding-top: 75px;
